main.css
/* || GENERAL */

html {
  /* font-family: sans-serif; */
  font-size:  clamp(1.1em, .7em + .4vw, 3em);

  --bs-icon-link-transform: translate3d(0, -.15rem, 0);
}

body {
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

main {
  overflow: hidden;
}

.padding {
  padding: 1rem 0;
}

.width {
  width: min(70rem, 100% - 2rem);
  margin-inline: auto;
}

.table td,
.table th {
  white-space: nowrap;
}
.table-responsive {
  padding: 0 !important;
}

/* || RESET CSS */

/* Source: https://www.joshwcomeau.com/css/custom-css-reset/ */

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin and padding*/
* {
  margin: 0;
  padding: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg{
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/

#root,
#__next {
  isolation: isolate;
}

